welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: ')' expected but ':' found.
	if(aSmile:Boolean && bSmile:Boolean) {true}
                                   ^monkeyTrouble:6: error: illegal start of simple expression
}
^