welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if(aSmile:Boolean && bSmile:Boolean) {true}
	if(aSmile:Boolean && !bSmile:Boolean) {false}
	if(!aSmile:Boolean && bSmile:Boolean) {false}
	if(!aSmile:Boolean && !bSmile:Boolean) {true}
}
